assets/css/style.css
/* ... */
.container.bottom-margin {
  margin-bottom: 100px
}

.vertical-cta {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding-top: 60px;
  padding-bottom: 65px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 25px;
  background-image: linear-gradient(111deg, #00f2b1, #3ee6e1)
}

.black-h2 {
  margin-top: 0;
  margin-bottom: 20px;
  color: #fff
}

.black-paragraph {
  color: #fff
}

.black-paragraph.centered {
  max-width: 600px;
  margin-bottom: 40px;
  text-align: center
}

.vertical-cta-wrap {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center
}

.white-paragraph {
  color: #b5bbbf;
  font-weight: 400
}

.intro-paragraph {
  margin-top: 40px
}

.white-paragraph.centered {
  max-width: 550px;
  text-align: center
}

.white-paragraph.bottom-margin {
  margin-bottom: 40px
}

.link-wrap {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center
}

.white-h2 {
  margin-bottom: 25px
}

.white-h2.centered {
  max-width: 480px;
  text-align: center
}

.logo-container {
  display: -ms-grid;
  display: grid;
  width: 100%;
  margin-top: 50px;
  grid-auto-columns: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto
}

.h1.centered {
  max-width: 720px;
  margin-top: 0;
  text-align: center
}

.h1.bottom-margin {
  margin-top: 0;
  margin-bottom: 25px
}

.text-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center
}

.text-container.bottom-margin {
  margin-bottom: 90px
}

.tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center
}

.tabs-menu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 750px;
  margin-top: 30px;
  margin-bottom: 160px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center
}

.tab-link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 35px;
  height: 35px;
  padding: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 2px;
  border-color: #b5bbbf;
  border-radius: 100%;
  background-color: transparent
}

.tab-link.w--current {
  border-color: #00a1db;
  background-color: transparent
}

.tab-container {
  display: -ms-grid;
  display: grid;
  width: 100%;
  grid-auto-columns: 1fr;
  grid-column-gap: 50px;
  grid-row-gap: 16px;
  -ms-grid-columns: 3.7fr 4.6fr;
  grid-template-columns: 3.7fr 4.6fr;
  -ms-grid-rows: auto;
  grid-template-rows: auto
}

.tab-text-wrap {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start
}

.tab-link-text {
  position: absolute;
  bottom: -40px;
  color: #b5bbbf;
  text-align: center;
  white-space: nowrap
}

.hero-images-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 60px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center
}

.hero-image-left {
  position: relative;
  left: 80px;
  right: auto;
  bottom: -140px;
  z-index: 2;
  width: 377px
}

.hero-image-right {
  position: relative;
  right: 130px;
  width: 710px
}
/* ... */

